docs/tests/parser/control_flow/invalid/SwitchMissingOpenParen.b
fn void test() {
    switch x) {
    }
}
